2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_open_playlist_item),
	(totem_embedded_parse_duration), (entry_parsed):
	parse the starttime as passed on by the playlists, and seek
	to that time straight after having opened the playlist item
	if need be (Closes: #401049)

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: Support application/asx
	for the benefit of [http://www.yle.fi/eurovision/main.php?id=2034]
	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry):
	Push starttime from ASX files to the applications

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (on_error_event):
	Don't skip past the last unplayable item in a playlist, otherwise
	we might end up playing all the files in a loop, even though we're
	not repeating

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (skip_unplayable_stream),
	(on_error_event), (on_buffering), (totem_embedded_construct):
	Skip to the next stream if the current one has an error in an
	idle, so that we don't hang for some sources

	Also skip unplayable streams if we don't have repeat on, as we
	don't have a good way of telling unplayable streams from other
	ones (Closes: #359048)

	Connect to the buffering signal, but don't print anything, useful
	for debugging

2007-08-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_open_playlist_item), (on_eos_event),
	(on_error_event), (totem_pl_item_free),
	(totem_embedded_clear_playlist), (totem_embedded_parse_duration),
	(entry_parsed):
	
	Store the playlist items in a struct, with associated information

	Parse (naively) duration information from the playlist parser

	When an error occurs during playback, and the file to play was marked
	as "short" (less than 60 seconds), skip to the next item in the